add local video playback page
